--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,6 @@
     width: 1280px;
     height: 720px;
     background-image: url('/static/images/background/0.gif');
-    background-size: 100% 100%;
-    background-position: center;
+    background-size: 200% 100%;
+    background-position: top center;
 }
