--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KOF</title>
+    <script src="/static/utils/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="/static/css/base.css" />
   </head>
   <body>
     <div id="kof"></div>
+
+    <script type="module">
+      import { KOF } from "/static/js/base.js";
+      let kof = new KOF("kof");
+    </script>
   </body>
 </html>
